Fix missing }} in package.json

--- a/template/package.json
+++ b/template/package.json
@@ -2,7 +2,7 @@
   "name": "{{basename}}",
   "version": "0.0.1",
   "description": "{{basename}}",
-  "author": "{{author",
+  "author": "{{author}}",
   "license": "MIT",
   "private": false,
   "scripts": {
